--- a/.github/workflows/ansibleMolecule.yml
+++ b/.github/workflows/ansibleMolecule.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Molecule tests
         run: |
-          export ANSIBLE_REMOTE_TEMP=/tmp/.ansible
+          export ANSIBLE_REMOTE_TEMP=/tmp
           export ANSIBLE_REMOTE_USER=root
           molecule test
         env:
