--- a/.github/workflows/ansibleMolecule.yml
+++ b/.github/workflows/ansibleMolecule.yml
@@ -10,7 +10,9 @@ jobs:
     strategy:
       matrix:
         image:
-          - 'geerlinguy/docker-ubuntu2204-ansible:latest' # 2204
+          - 'grababyte/alpine-base:0.7.1'
+          - 'grababyte/ubuntu-base:0.2.0'
+          - 'grababyte/centos-base:0.2.0'
 
     steps:
       - name: Check out the codebase
@@ -22,12 +24,10 @@ jobs:
           python-version: '3.x'
 
       - name: Install Molecule dependencies
-        run: pip3 install ansible molecule[docker] docker
+        run: pip3 install ansible ansible-lint molecule[docker] docker
 
       - name: Run Molecule tests
         run: |
-          export ANSIBLE_REMOTE_TEMP=/tmp
-          export ANSIBLE_REMOTE_USER=root
           molecule test
         env:
           PY_COLORS: '1'
