--- a/.github/workflows/ansibleRelease.yml
+++ b/.github/workflows/ansibleRelease.yml
@@ -6,9 +6,6 @@ name: Ansible Release
       GALAXY_TOKEN:
         description: 'The token to publish to ansible-galaxy'
         required: true
-  push:
-    tags:
-      - '*'
 
 jobs:
   release:
@@ -19,6 +16,18 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
 
+      - name: Download file
+        uses: actions/download-artifact@v1
+        with:
+          name: version.sh
+          path: metadata
+
+      - name: Source metadata
+        id: metadata
+        run: |
+          echo "::set-output name=NAME::${PROJECT_NAME}"
+          echo "::set-output name=OWNER::$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')"
+
       - name: Set up Python 3.
         uses: actions/setup-python@v2
         with:
@@ -28,6 +37,7 @@ jobs:
         run: pip3 install ansible-core
 
       - name: Trigger a new import on Galaxy.
-        run: >-
-          ansible-galaxy role import --api-key ${{ secrets.GALAXY_TOKEN }}
-          $(echo ${{ github.repository }} | cut -d '/' -f1) $(echo ${{ github.repository }} | cut -d '/' -f2)
+        run: |
+          if [ $GITHUB_REF_NAME = main ]; then
+            ansible-galaxy role import --api-key ${{ secrets.GALAXY_TOKEN }} ${{ steps.metadata.outputs.OWNER }} ${{ steps.metadata.outputs.NAME }}
+          fi
