--- a/.github/workflows/pythonScan.yml
+++ b/.github/workflows/pythonScan.yml
@@ -14,7 +14,7 @@ jobs:
     run_on: ubuntu-latest
     steps:
       - name: Check out the codebase
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
 
       - name: Run Snyk Vulnerability scanner for Python
         uses: snyk/actions/python@master
