--- a/.github/workflows/pythonScan.yml
+++ b/.github/workflows/pythonScan.yml
@@ -11,7 +11,7 @@ jobs:
   scan:
     name: Python Vulnerability Scan
     environment: CI
-    run_on: ubuntu-latest
+    runs_on: ubuntu-latest
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v2
