--- a/.github/workflows/pythonScan.yml
+++ b/.github/workflows/pythonScan.yml
@@ -1,5 +1,5 @@
 ---
-name: Python Scan
+name: Python Vulnerability Scan
 'on':
   workflow_call:
     secrets:
@@ -11,7 +11,7 @@ jobs:
   scan:
     name: Python Vulnerability Scan
     environment: CI
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v2
