Initial directory structure

--- a/.github/workflows/dockerBuildScan.yml
+++ b/.github/workflows/dockerBuildScan.yml
@@ -19,7 +19,7 @@ name: Docker Vulnerability Scan
 
 jobs:
   scan:
-    name: Vulnerability Scan
+    name: Docker Vulnerability Scan
     environment: CI
     runs-on: ubuntu-latest
     steps:
