--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       yamlPath: '.github'
     needs: get-version
   sonar-scan:
-    uses: ./.github/workflows.sonarScan.yml
+    uses: ./.github/workflows/sonarScan.yml
     secrets:
       WORKFLOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
