--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
     with:
       yamlPath: '.github'
     needs: get-version
+  sonar-scan:
+    uses: ./.github/workflows/sonarScan.yml
+    secrets:
+      WORKFLOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    needs: get-version
   update-version:
     uses: ./.github/workflows/updateVersion.yml
     with:
