--- a/.github/workflows/shellCheck.yml
+++ b/.github/workflows/shellCheck.yml
@@ -13,7 +13,7 @@ jobs:
 
       - name: Lint code
         run: |
-          for i in $(find . -name "*.sh"; do
+          for i in $(find . -name "*.sh"); do
             shellcheck "$i"
           done && \
           echo "Bash Linting: Successful"
