fix: Groovy Lint fail on

--- a/.github/workflows/groovyLint.yml
+++ b/.github/workflows/groovyLint.yml
@@ -27,5 +27,6 @@ jobs:
         run: |
           npm-groovy-lint \
             --path ${{ inputs.groovyPath }} \
+            --failon error \
             --files "**/*.groovy" && \
           echo "Groovy Linting: Successful"
