--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -33,9 +33,9 @@ jobs:
         id: metadata
         run: |
           source metadata/version.sh
-          echo "::set-output name=NAME::${PROJECT_NAME}"
-          echo "::set-output name=VERSION::${FUTURE_VERSION}"
-          echo "::set-output name=OWNER::$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')"
+          echo "name=${PROJECT_NAME}" >> $GITHUB_ENV
+          echo "version=${FUTURE_VERSION}" >> $GITHUB_ENV
+          echo "owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -50,5 +50,5 @@ jobs:
           file: ${{ inputs.dockerfilePath }}
           push: ${{ contains(github.ref, 'refs/heads/main') }}
           tags: |
-            ${{ steps.metadata.outputs.OWNER }}/${{ steps.metadata.outputs.NAME }}:latest
-            ${{ steps.metadata.outputs.OWNER }}/${{ steps.metadata.outputs.NAME }}:${{ steps.metadata.outputs.VERSION }}
+            ${{ steps.metadata.outputs.owner }}/${{ steps.metadata.outputs.name }}:latest
+            ${{ steps.metadata.outputs.owner }}/${{ steps.metadata.outputs.name }}:${{ steps.metadata.outputs.version }}
