--- a/.github/workflows/dockerBuildScan.yml
+++ b/.github/workflows/dockerBuildScan.yml
@@ -42,16 +42,16 @@ jobs:
         id: metadata
         run: |
           source metadata/version.sh
-          echo "name=${PROJECT_NAME}" >> $GITHUB_ENV
+          echo "project_name=${PROJECT_NAME}" >> $GITHUB_ENV
           echo "version=${FUTURE_VERSION}" >> $GITHUB_ENV
-          echo "owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "project_owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Docker Build
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ${{ inputs.dockerfilePath }}
-          tags: ${{ steps.metadata.outputs.owner }}/${{ steps.metadata.outputs.name }}:${{ steps.metadata.outputs.version }}
+          tags: ${{ env.project_owner }}/${{ env.project_name }}:${{ env.version }}
 
       - name: Run Snyk Vulnerability scanner for Docker
         continue-on-error: true
@@ -59,5 +59,5 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: ${{ steps.metadata.outputs.owner }}/${{ steps.metadata.outputs.name }}:${{ steps.metadata.outputs.version }}
+          image: ${{ env.project_owner }}/${{ env.project_name }}:${{ env.version }}
           args: --file=${{ inputs.dockerfilePath }}
