--- a/.github/workflows/helmTemplate.yml
+++ b/.github/workflows/helmTemplate.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Set Artifact Name
         run: |
-          echo "artifact=find helm/ -type f | xargs cat | grep '  name:' | cut -d ':' -f 2 | tr -d ' '" >> $GITHUB_ENV
+          echo "artifact=$(find helm/ -type f | xargs cat | grep '  name:' | cut -d ':' -f 2 | tr -d ' ')" >> $GITHUB_ENV
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
