--- a/.github/workflows/helmRelease.yml
+++ b/.github/workflows/helmRelease.yml
@@ -13,21 +13,21 @@ name: Helm Release
 jobs:
   release:
     name: Release
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase.
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Configure Git
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
 
-      - name: Release to GitHub
-        uses: ./.github/actions/helm-index
+      - name: Run chart-releaser
+        uses: helm/chart-releaser-action@v1.6.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        with:
-          repository-name: "${{ github.event.repository.name }}"
-          package-path: helm
-          release-name: "${{ github.event.inputs.version }}"
