--- a/.github/workflows/helmRelease.yml
+++ b/.github/workflows/helmRelease.yml
@@ -2,9 +2,6 @@
 name: Helm Release
 'on':
   workflow_call:
-  push:
-    branches:
-      - main
 
 jobs:
   release:
@@ -12,6 +9,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
