feat: Add terraform CI

--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -22,3 +22,6 @@ jobs:
       - name: Plan Terraform
         run: |
           terraform -chdir=environments/${{ inputs.terraformPath }} plan
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
