--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -20,8 +20,10 @@ jobs:
           terraform -chdir=environments/${{ inputs.terraformPath }} init
 
       - name: Plan Terraform
-        run: |
-          terraform -chdir=environments/${{ inputs.terraformPath }} plan
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          export AWS_ACCESS_KEY_ID="$AWS_ACCESS_KEY_ID"
+          export AWS_SECRET_ACCESS_KEY="$AWS_SECRET_ACCESS_KEY"
+          terraform -chdir=environments/${{ inputs.terraformPath }} plan
