--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -17,11 +17,11 @@ jobs:
 
       - name: Initialize Terraform
         run: |
-          terraform -chdir=environments/${{ inputs.terraformPath }} init
+          terraform -chdir=${{ inputs.terraformPath }} init
 
       - name: Plan Terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          terraform -chdir=environments/${{ inputs.terraformPath }} plan || :
+          terraform -chdir=${{ inputs.terraformPath }} plan || :
