--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
 
+      - name: Initialize Terraform
+        run: |
+          terraform -chdir=${{ inputs.terraformPath }} init
+
       - name: Validate Terraform
         run: |
           terraform validate ${{ inputs.terraformPath }}
