feat: Add validate stage and terraformPath refactoring

--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -21,4 +21,5 @@ jobs:
 
       - name: Validate Terraform
         run: |
+          cd ${{ inputs.terraformPath }} && \
           terraform validate ${{ inputs.terraformPath }}
