--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -21,5 +21,6 @@ jobs:
 
       - name: Validate Terraform
         run: |
-          cd ${{ inputs.terraformPath }} && \
+          find .
+          cd ./${{ inputs.terraformPath }} && \
           terraform validate ${{ inputs.terraformPath }}
