--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -15,12 +15,9 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
 
-      - name: Initialize Terraform
-        run: |
-          terraform -chdir=${{ inputs.terraformPath }} init
-
       - name: Validate Terraform
         run: |
           find .
           cd ./${{ inputs.terraformPath }} && \
-          terraform validate ${{ inputs.terraformPath }}
+          terraform init && \
+          terraform validate
