--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -15,13 +15,11 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
 
-      - name: Initialize Terraform
-        run: |
-          terraform -chdir=${{ inputs.terraformPath }} init
-
       - name: Plan Terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          terraform -chdir=${{ inputs.terraformPath }} plan || :
+          cd ${{ inputs.terraformPath }} && \
+          terraform init && \
+          terraform plan || :
