--- a/.github/workflows/dockerBuildPublish.yml
+++ b/.github/workflows/dockerBuildPublish.yml
@@ -21,10 +21,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the codebase
-        uses: actions/checkout
+        uses: actions/checkout@v3
 
       - name: Download file
-        uses: actions/download-artifact
+        uses: actions/download-artifact@v4
         with:
           name: version.sh
           path: metadata
