--- a/.github/workflows/dockerBuildScan.yml
+++ b/.github/workflows/dockerBuildScan.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Download file
-        uses: actions/download-artifact
+        uses: actions/download-artifact@v4
         with:
           name: version.sh
           path: metadata
