--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -3,7 +3,7 @@ name: Terraform Plan
 'on':
   workflow_call:
     inputs:
-      terraformPath:
+      workspace:
         required: true
         type: string
 
@@ -20,6 +20,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd ${{ inputs.terraformPath }} && \
           terraform init && \
+          terraform workspace new ${{ inputs.workspace }} && \
+          terraform workspace select ${{ inputs.workspace }} && \
           terraform plan || :
