--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -6,6 +6,9 @@ name: Terraform Plan
       workspace:
         required: true
         type: string
+      whitepaper:
+        required: true
+        type: string
 
 jobs:
   plan:
@@ -20,6 +23,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
+          cd whitepapers/${{ inputs.whitepaper }} && \
           terraform init -backend-config=backends/${{ inputs.workspace }} && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
