--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -3,7 +3,10 @@ name: Terraform Plan
 'on':
   workflow_call:
     inputs:
-      terraformPath:
+      workspace:
+        required: true
+        type: string
+      whitepaper:
         required: true
         type: string
 
@@ -20,6 +23,8 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          cd ${{ inputs.terraformPath }} && \
-          terraform init && \
+          cd whitepapers/${{ inputs.whitepaper }} && \
+          terraform init -backend-config=backends/${{ inputs.workspace }} && \
+          terraform workspace new ${{ inputs.workspace }} && \
+          terraform workspace select ${{ inputs.workspace }} && \
           terraform plan || :
