--- a/.github/workflows/ansibleRelease.yml
+++ b/.github/workflows/ansibleRelease.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           source metadata/version.sh
           echo "project_name=${PROJECT_NAME}" >> $GITHUB_ENV
+          echo "role_name=$(echo ${PROJECT_NAME} | rev | cut -d '-' -f1 | rev)" >> $GITHUB_ENV
           echo "project_owner=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Set up Python 3.
@@ -40,5 +41,5 @@ jobs:
       - name: Trigger a new import on Galaxy.
         run: |
           if [ $GITHUB_REF_NAME = main ]; then
-            ansible-galaxy role import --api-key ${{ secrets.GALAXY_TOKEN }} ${{ env.project_owner }} ${{ env.project_name }}
+            ansible-galaxy role import --api-key ${{ secrets.GALAXY_TOKEN }} --role-name ${{ env.role_name}} ${{ env.project_owner }} ${{ env.project_name }}
           fi
