--- a/.github/workflows/terraformLint.yml
+++ b/.github/workflows/terraformLint.yml
@@ -10,7 +10,7 @@ name: Terraform Linter
 jobs:
   lint:
     name: Lint
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
