--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -10,7 +10,7 @@ name: Terraform Validator
 jobs:
   validate:
     name: Validate
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
