--- a/.github/workflows/terraformApply.yml
+++ b/.github/workflows/terraformApply.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::056586966152:role/grababyte
           aws-region: eu-west-1
 
       - name: Apply Terraform
@@ -31,4 +30,4 @@ jobs:
           terraform init -backend-config=backends/${{ inputs.workspace }} && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
-          terraform apply || :
+          terraform apply
