--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -15,10 +15,6 @@ jobs:
   plan:
     name: Plan
     runs-on: ubuntu-22.04
-    env:
-      permissions:
-        id-token: write # This is required for requesting the JWT
-        contents: read
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
@@ -26,8 +22,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::056586966152:role/grababyte
           aws-region: eu-west-1
 
       - name: Plan Terraform
@@ -36,4 +31,4 @@ jobs:
           terraform init -backend-config=backends/${{ inputs.workspace }} && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
-          terraform plan || :
+          terraform plan
