--- a/.github/workflows/terraformApply.yml
+++ b/.github/workflows/terraformApply.yml
@@ -1,5 +1,5 @@
 ---
-name: Terraform Plan
+name: Terraform Apply
 'on':
   workflow_call:
     inputs:
@@ -10,10 +10,9 @@ name: Terraform Plan
         required: true
         type: string
 
-
 jobs:
-  plan:
-    name: Plan
+  apply:
+    name: Apply
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
@@ -25,10 +24,10 @@ jobs:
           role-to-assume: arn:aws:iam::056586966152:role/grababyte
           aws-region: eu-west-1
 
-      - name: Plan Terraform
+      - name: Apply Terraform
         run: |
           cd whitepapers/${{ inputs.whitepaper }} && \
           terraform init -backend-config=backends/${{ inputs.workspace }} && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
-          terraform plan
+          terraform apply --auto-approve
