--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -31,7 +31,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::${{ inputs.account }}:role/${{ inputs.role }}
-          aws-region: eu-west-2
+          aws-region: ${{ inputs.region }}
 
       - name: Plan Terraform
         run: |
