--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -9,10 +9,11 @@ name: Terraform Plan
       terraformPath:
         required: true
         type: string
-      account:
+      region:
         required: true
         type: string
-      region:
+    secrets:
+      account:
         required: true
         type: string
       role:
@@ -30,7 +31,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ inputs.account }}:role/${{ inputs.role }}
+          role-to-assume: arn:aws:iam::${{ secrets.account }}:role/${{ secrets.role }}
           aws-region: ${{ inputs.region }}
 
       - name: Plan Terraform
