--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -6,10 +6,19 @@ name: Terraform Plan
       workspace:
         required: true
         type: string
-      whitepaper:
+      terraformPath:
         required: true
         type: string
-
+      region:
+        required: true
+        type: string
+    secrets:
+      account:
+        required: true
+        type: string
+      role:
+        required: true
+        type: string
 
 jobs:
   plan:
@@ -22,12 +31,12 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::056586966152:role/grababyte
-          aws-region: eu-west-1
+          role-to-assume: arn:aws:iam::${{ secrets.account }}:role/${{ secrets.role }}
+          aws-region: ${{ inputs.region }}
 
       - name: Plan Terraform
         run: |
-          cd whitepapers/${{ inputs.whitepaper }} && \
+          cd ${{ inputs.terraformPath }} && \
           terraform init -backend-config=backends/${{ inputs.workspace }} && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
