--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -3,9 +3,17 @@ name: Terraform Validator
 'on':
   workflow_call:
     inputs:
+      region:
+        required: true
+        type: string
       terraformPath:
         required: true
         type: string
+    secrets:
+      account:
+        required: true
+      role:
+        required: true
 
 jobs:
   validate:
@@ -14,6 +22,12 @@ jobs:
     steps:
       - name: Check out the codebase.
         uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.account }}:role/${{ secrets.role }}
+          aws-region: ${{ inputs.region }}
 
       - name: Validate Terraform
         run: |
