--- a/.github/workflows/terraformApply.yml
+++ b/.github/workflows/terraformApply.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Apply Terraform
         run: |
           cd ${{ inputs.terraformPath }} && \
-          terraform init -backend-config=backends/${{ inputs.workspace }} && \
+          terraform init -backend-config=backends/${{ inputs.workspace }}.tf && \
           terraform workspace new ${{ inputs.workspace }} && \
           terraform workspace select ${{ inputs.workspace }} && \
           terraform apply --auto-approve
