feat: add terraform test

--- a/.github/workflows/terraformTest.yml
+++ b/.github/workflows/terraformTest.yml
@@ -36,4 +36,4 @@ jobs:
         run: |
           cd ./${{ inputs.terraformPath }} && \
           terraform init && \
-          terraform test ${{ inputs.varFile }}
+          terraform test -var-file ${{ inputs.varFile }}
