feat: add semantic release to workflow (#47)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,27 +7,16 @@ name: CI
       - main
 
 jobs:
-  get-version:
-    uses: ./.github/workflows/getVersion.yml
-    with:
-      metadataFile: 'metadata.json'
-      metadataPath: .
   yaml-lint:
     uses: ./.github/workflows/yamlLint.yml
     with:
       yamlPath: '.github'
-    needs: get-version
   sonar-scan:
     uses: ./.github/workflows/sonarScan.yml
     secrets:
       WORKFLOW_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    needs: get-version
-  update-version:
-    uses: ./.github/workflows/updateVersion.yml
-    with:
-      gitUsername: 'grababyte'
-      gitEmail: 'grababyte@github.com'
-      metadataFile: 'metadata.json'
-      metadataPath: .
+    needs: [yaml-lint]
+  semantic-release:
+    uses: GrabAByte/github-devops-workflows/.github/workflows/semanticRelease.yml@0.14.0
     needs: [yaml-lint, sonar-scan]
