--- a/.github/workflows/terraformDestroy.yml
+++ b/.github/workflows/terraformDestroy.yml
@@ -9,6 +9,9 @@ name: Terraform Destroy
       terraformPath:
         required: true
         type: string
+      terraformVars:
+        required: true
+        type: string
       region:
         required: true
         type: string
@@ -38,4 +41,4 @@ jobs:
           terraform init -backend-config=backends/${{ inputs.workspace }}.tf && \
           terraform workspace new ${{ inputs.workspace }} || \
           terraform workspace select ${{ inputs.workspace }} && \
-          terraform destroy --auto-approve
+          terraform destroy --auto-approve -var-file ${{ inputs.terraformVars }}
