--- a/.github/workflows/terraformValidate.yml
+++ b/.github/workflows/terraformValidate.yml
@@ -32,5 +32,5 @@ jobs:
       - name: Validate Terraform
         run: |
           cd ./${{ inputs.terraformPath }} && \
-          terraform init && \
+          terraform init --reconfigure && \
           terraform validate
