--- a/.github/workflows/terraformPlan.yml
+++ b/.github/workflows/terraformPlan.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Plan Terraform
         run: |
           cd ${{ inputs.terraformPath }} && \
-          terraform init -backend-config=backends/${{ inputs.workspace }}.tf && \
+          terraform init && \
           terraform workspace new ${{ inputs.workspace }} || \
           terraform workspace select ${{ inputs.workspace }} && \
           terraform plan -var-file ${{ inputs.terraformVars }}
