--- a/.github/workflows/terraformApply.yml
+++ b/.github/workflows/terraformApply.yml
@@ -24,6 +24,7 @@ name: Terraform Apply
 jobs:
   apply:
     name: Apply
+    environment: ${{ inputs.workspace }}
     runs-on: ubuntu-22.04
     steps:
       - name: Check out the codebase.
